tests/Asm/negative/vtest007.jva
-- branch type mismatch

function main() {
  push true;
  br {
    true: { push "a"; }
    false: { push 1; }
  };
  ret;
}
